# Tickertea

./: .dependency-cruiser.cjs  .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
db/: local_setup.sql
db/migrations/: 0001_init_extensions.sql  0002_tenancy_and_users.sql  0003_companies.sql  0004_sources_and_ingest.sql  0005_signals.sql  0006_evidence.sql  0007_scoring.sql  0008_snapshots.sql  0009_analog.sql  0010_watchlists_alerts.sql  0011_rls_policies.sql
db/seed/: 01_tenant_users.sql  02_signal_categories.sql  03_indices_companies.sql  04_sources.sql  05_sample_signals.sql
docs/architecture/: 00-overview.md  01-system-architecture.md  02-data-model.md  03-ingestion-framework.md  04-signal-scoring-engine.md  05-historical-analog-engine.md  (+4 more)
infra/: docker-compose.yml
scripts/: db-setup.ps1
workers/: README.md  pyproject.toml
workers/tests/: test_guardrail.py  test_management_change.py  test_nse_normalizer.py  test_scoring.py
workers/tickertea/: __init__.py  cli.py  pipeline.py
workers/tickertea/analog/: engine.py  features.py
workers/tickertea/common/: db.py  rawstore.py  repository.py  settings.py  types.py
workers/tickertea/detect/: base.py  context.py  registry.py
workers/tickertea/detect/detectors/: hiring_spike.py  management_change.py
workers/tickertea/ingestion/: base.py  registry.py
workers/tickertea/ingestion/connectors/: nse_announcements.py
workers/tickertea/ingestion/normalizers/: nse_announcements.py
workers/tickertea/scoring/: engine.py  guardrail.py
(+29 files in other folders)
